Use a non-bogus error reporter for the subscript loader.  Bug 340019, r=mrbkap, sr=brendan