js/src/xpconnect/loader/mozJSComponentLoader.cpp
@@ -103,8 +103,8 @@ static PRLogModuleInfo *gJSCLLog;
 
 #define LOG(args) PR_LOG(gJSCLLog, PR_LOG_DEBUG, args)
 
-JS_STATIC_DLL_CALLBACK(void)
-Reporter(JSContext *cx, const char *message, JSErrorReport *rep)
+void JS_DLL_CALLBACK
+mozJSLoaderErrorReporter(JSContext *cx, const char *message, JSErrorReport *rep)
 {
     nsresult rv;
 
@@ -562,7 +562,7 @@ mozJSComponentLoader::LoadModule(nsILocalFile* aComponentFile,
         return rv;
     }
 
-    JSCLAutoErrorReporterSetter aers(cx, Reporter);
+    JSCLAutoErrorReporterSetter aers(cx, mozJSLoaderErrorReporter);
 
     jsval argv[2], retval, NSGetModule_val;
 
@@ -932,7 +932,7 @@ mozJSComponentLoader::GlobalForLocation(nsILocalFile *aComponent,
     rv = mRuntimeService->GetBackstagePass(getter_AddRefs(backstagePass));
     NS_ENSURE_SUCCESS(rv, rv);
 
-    JSCLAutoErrorReporterSetter aers(cx, Reporter);
+    JSCLAutoErrorReporterSetter aers(cx, mozJSLoaderErrorReporter);
 
     nsCOMPtr<nsIXPConnect> xpc =
         do_GetService(kXPConnectServiceContractID, &rv);
